force-app/main/default/objects/Team_Facilitator__c/Team_Facilitator__c.object-meta.xml
<CustomObject>
    <description>Records for individuals serving as a Team Facilitator</description>
    <label>Team Facilitator</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Facilitators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>