force-app/main/default/objects/Team_Facilitator__c/fields/Application_Received__c.field-meta.xml
<CustomField>
    <fullName>Application_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the Team Facilitator&apos;s application has been received</inlineHelpText>
    <label>Application Received</label>
    <type>Checkbox</type>
</CustomField>