force-app/main/default/objects/Team_Facilitator__c/fields/Background_Check_Approved__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Check Approved</label>
    <type>Checkbox</type>
</CustomField>