force-app/main/default/objects/Team_Facilitator__c/fields/Certification_Approved__c.field-meta.xml
<CustomField>
    <fullName>Certification_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification Approved</label>
    <type>Checkbox</type>
</CustomField>