force-app/main/default/objects/Team_Facilitator__c/fields/Certification_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Certification_Valid_Until__c</fullName>
    <label>Certification Valid Until</label>
    <type>Date</type>
</CustomField>