force-app/main/default/objects/Team_Facilitator__c/fields/Client_PAT_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Client_PAT_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the client PAT Form is complete</inlineHelpText>
    <label>Client PAT Form Received</label>
    <type>Checkbox</type>
</CustomField>