force-app/main/default/objects/Team_Facilitator__c/fields/Clients_Served_Location_Updated_on_Websi__c.field-meta.xml
<CustomField>
    <fullName>Clients_Served_Location_Updated_on_Websi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clients Served Location Updated on Websi</label>
    <type>Checkbox</type>
</CustomField>