force-app/main/default/objects/Team_Facilitator__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field connects the team facilitator to his/her contact record</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Team Facilitators</relationshipLabel>
    <relationshipName>Team_Facilitators</relationshipName>
    <type>Lookup</type>
</CustomField>