force-app/main/default/objects/Team_Facilitator__c/fields/Course_Workshop_Survey_Received__c.field-meta.xml
<CustomField>
    <fullName>Course_Workshop_Survey_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this TF has completed their initial survey</inlineHelpText>
    <label>Course &amp; Workshop Survey Received</label>
    <type>Checkbox</type>
</CustomField>