force-app/main/default/objects/Team_Facilitator__c/fields/Courses_Available__c.field-meta.xml
<CustomField>
    <fullName>Courses_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Courses Available</label>
    <type>Checkbox</type>
</CustomField>