force-app/main/default/objects/Team_Facilitator__c/fields/Courses_Completed__c.field-meta.xml
<CustomField>
    <fullName>Courses_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Courses Completed</label>
    <type>Checkbox</type>
</CustomField>