force-app/main/default/objects/Team_Facilitator__c/fields/In_Person_Workshop__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Workshop__c</fullName>
    <label>In-Person Workshop</label>
    <type>Date</type>
</CustomField>