force-app/main/default/objects/Team_Facilitator__c/fields/In_Person_Workshop_Completed__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Workshop_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Person Workshop Completed</label>
    <type>Checkbox</type>
</CustomField>