force-app/main/default/objects/Team_Facilitator__c/fields/Initial_TF_Agreement_Received__c.field-meta.xml
<CustomField>
    <fullName>Initial_TF_Agreement_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this TF has signed their agreement</inlineHelpText>
    <label>Initial TF Agreement Received</label>
    <type>Checkbox</type>
</CustomField>