force-app/main/default/objects/Team_Facilitator__c/fields/Interview_Completed__c.field-meta.xml
<CustomField>
    <fullName>Interview_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview Completed</label>
    <type>Checkbox</type>
</CustomField>