force-app/main/default/objects/Team_Facilitator__c/fields/Interview_Results__c.field-meta.xml
<CustomField>
    <fullName>Interview_Results__c</fullName>
    <description>Notes from the TF Interview</description>
    <label>Interview Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>