force-app/main/default/objects/Team_Facilitator__c/fields/Interview_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Interview_Scheduled__c</fullName>
    <inlineHelpText>The date for which the interview is scheduled</inlineHelpText>
    <label>Interview Scheduled</label>
    <type>Date</type>
</CustomField>