force-app/main/default/objects/Team_Facilitator__c/fields/Lead_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Facilitator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether this facilitator serves as a lead</description>
    <label>Lead (Facilitator)</label>
    <type>Checkbox</type>
</CustomField>