force-app/main/default/objects/Team_Facilitator__c/fields/Monitoring_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitoring Recommended</label>
    <type>Checkbox</type>
</CustomField>