force-app/main/default/objects/Team_Facilitator__c/fields/of_Reference_Letters_Received__c.field-meta.xml
<CustomField>
    <fullName>of_Reference_Letters_Received__c</fullName>
    <label># of Reference Letters Received</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>