force-app/main/default/objects/Team_Facilitator__c/fields/Practicum_Completed__c.field-meta.xml
<CustomField>
    <fullName>Practicum_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Practicum Completed</label>
    <type>Checkbox</type>
</CustomField>