force-app/main/default/objects/Team_Facilitator__c/fields/Recert_Agreement_Received__c.field-meta.xml
<CustomField>
    <fullName>Recert_Agreement_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recert Agreement Received</label>
    <type>Checkbox</type>
</CustomField>