force-app/main/default/objects/Team_Facilitator__c/fields/Recert_Personal_Growth_Plan_Received__c.field-meta.xml
<CustomField>
    <fullName>Recert_Personal_Growth_Plan_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recert Personal Growth Plan Received</label>
    <type>Checkbox</type>
</CustomField>