force-app/main/default/objects/Team_Facilitator__c/fields/Reference_Letters_Received__c.field-meta.xml
<CustomField>
    <fullName>Reference_Letters_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the Team Facilitator&apos;s reference letters have been received</inlineHelpText>
    <label>Reference Letters Received</label>
    <type>Checkbox</type>
</CustomField>