force-app/main/default/objects/Team_Facilitator__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Describes the stage of this team facilitator</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
                <label>On-going</label>
            </value>
            <value>
                <fullName>On-boarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>