force-app/main/default/objects/Team_Facilitator__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date this team facilitator started working with Atlas</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>