force-app/main/default/objects/Team_Facilitator__c/fields/Workshops_Practicum_Notes__c.field-meta.xml
<CustomField>
    <fullName>Workshops_Practicum_Notes__c</fullName>
    <description>Notes regarding this Team Facilitator</description>
    <label>Workshops &amp; Practicum Notes</label>
    <length>60000</length>
    <type>Html</type>
</CustomField>