force-app/main/default/objects/Team_Facilitator__c/recordTypes/Team_Facilitator_Intake.recordType-meta.xml
<RecordType>
    <fullName>Team_Facilitator_Intake</fullName>
    <active>true</active>
    <description>These are potential team facilitators</description>
    <label>Team Facilitator - Intake</label>
</RecordType>