force-app/main/default/objects/Team_Facilitator__c/recordTypes/Team_Facilitator_On_boarding.recordType-meta.xml
<RecordType>
    <fullName>Team_Facilitator_On_boarding</fullName>
    <active>true</active>
    <label>Team Facilitator - On-boarding</label>
</RecordType>