force-app/main/default/objects/Team_Facilitator__c/recordTypes/Team_Facilitator_Ongoing.recordType-meta.xml
<RecordType>
    <fullName>Team_Facilitator_Ongoing</fullName>
    <active>true</active>
    <description>This record type is for current and ongoing team facilitators</description>
    <label>Team Facilitator - On-going</label>
</RecordType>