force-app/main/default/objects/Team_Facilitator__c/validationRules/Number_of_Reference_Letters_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Reference_Letters_Received</fullName>
    <active>true</active>
    <description>This keeps the Reference Letter field from being given too high of a number</description>
    <errorConditionFormula>of_Reference_Letters_Received__c  &gt; 9</errorConditionFormula>
    <errorDisplayField>of_Reference_Letters_Received__c</errorDisplayField>
    <errorMessage>Too high of a number for reference letters received</errorMessage>
</ValidationRule>